--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "name": "@nuuji/sudoku",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "main": "src/index.js",
   "repository": "git@github.com:nuuji/sudoku.git",
   "author": "Dan Nash <dan@nuuji.tech>",
   "license": "UNLICENSED",
   "private": true,
   "scripts": {
-    "start": "node src/index.js",
-    "test": "jest",
-    "printExercise": "node scripts/printExercise.js"
+    "solve": "node scripts/solveExercise.js",
+    "generate": "node scripts/generateExercise.js",
+    "test": "jest --env node",
+    "print": "node scripts/printExercise.js"
   },
   "devDependencies": {
     "jest": "^25.4.0"
