--- a/package.json
+++ b/package.json
@@ -10,9 +10,15 @@
     "solve": "node scripts/solveExercise.js",
     "generate": "node scripts/generateExercise.js",
     "test": "jest --env node",
+    "lint": "eslint ./src/**/*.js ./test/**/*.test.js",
     "print": "node scripts/printExercise.js"
   },
   "devDependencies": {
-    "jest": "^25.4.0"
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-jest": "^23.9.0",
+    "eslint-plugin-prettier": "^3.1.3",
+    "jest": "^25.4.0",
+    "prettier": "^2.0.5"
   }
 }
